# build-llm-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml  requirements-pytorch.txt  requirements.txt
llm_from_scratch/appx_a/: check_cuda.py  listing_A_part_1.py  listing_A_part_2.py  listing_A_part_3_script.py  toy_dataset.py
llm_from_scratch/ch_02_a_main/: .gitignore  notebook_02_main.py
