[project]
name = "llm_from_scratch"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.8.22",
    "torch==2.4.1+cu121",
    "torchaudio==2.4.1+cu121",
    "torchvision==0.19.1+cu121",
]

[tool.uv]
# https://docs.astral.sh/uv/reference/settings/#index-strategy
# Replace when https://github.com/astral-sh/uv/pull/7481 is ready
index-strategy = "unsafe-first-match"
extra-index-url = ["https://pypi.org/simple", "https://download.pytorch.org/whl/cu121"]

[tool.ruff]
# See https://docs.astral.sh/ruff/configuration/
line-length = 120
